--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,16 @@ body {
   background: white;
 }
 
-h1{
+h1 {
   text-align: center;
 }
 
-.header{
+.header {
   text-align: center;
 }
 
 a {
-  color: #03A9F4;
+  color: #03a9f4;
 }
 
 .wrapper {
@@ -23,7 +23,7 @@ a {
 }
 
 .game {
-border: 1px solid #aaa;
+  border: 5px solid #aaa;
 }
 
 .player {
@@ -33,8 +33,8 @@ border: 1px solid #aaa;
 }
 
 .player .header {
-padding: 20px;
-border-bottom: 1px solid #aaa;
+  padding: 20px;
+  border-bottom: 1px solid #aaa;
 }
 
 .board {
@@ -85,33 +85,33 @@ border-bottom: 1px solid #aaa;
 }
 
 .rounds p {
-border-bottom: 1px solid #aaa;
-padding-bottom: 10px;
-margin-bottom: 0;
-text-align: center;
+  border-bottom: 1px solid #aaa;
+  padding-bottom: 10px;
+  margin-bottom: 0;
+  text-align: center;
 }
 
 .round {
-padding: 10px;
-border-bottom: 1px solid #aaa;
+  padding: 10px;
+  border-bottom: 1px solid #aaa;
 }
 
 .round .winner {
-color: green;
+  color: green;
 }
 
 .round div {
-display: inline-block;
-width: 32%;
+  display: inline-block;
+  width: 32%;
 }
 
 .btn {
-padding: 10px 30px;
-display: flex;
-justify-content: center;
-background-color: #eee;
-margin-bottom: 20px;
-cursor: pointer;
+  padding: 10px 30px;
+  display: flex;
+  justify-content: center;
+  background-color: #eee;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .left {
